<resources>
    <string name="app_name">알람</string>
    <string name="tv_am">AM</string>
    <string name="tv_pm">PM</string>
    <string name="tv_time">6:40</string>
    <string name="tv_alarm_on">On</string>
    <string name="tv_alarm_off">On</string>
    <string name="tv_day">월 화 수 목 금 토 일</string>
    <string name="tv_memo">memo</string>
    <string name="action_setting">Setting</string>
    <string name="action_add_alarm">알람 추가</string>
    <string name="action_save">save</string>
    <string name="tv_add_memo">메모</string>
    <string name="ed_add_memo">알림 메세지를 입력</string>
    <string name="tv_sound">사운드</string>
    <string name="tv_seleted_sound">알람1</string>
    <string name="tv_iteration">반복</string>
    <string name="tv_replay">다시 알림</string>
    <string name="tv_iter">월 화 수 목 금</string>
    <string name="tv_optional">현재 위치</string>
    <string name="action_sound">사운드 설정</string>
    <string name="action_optional">추가 기능 설정</string>
    <string name="action_iteration">반복 설정</string>
    <string name="tv_sunday">일요일마다</string>
    <string name="tv_monday">월요일마다</string>
    <string name="tv_tuesday">화요일마다</string>
    <string name="tv_wednesday">수요일마다</string>
    <string name="tv_thursday">목요일마다</string>
    <string name="tv_friday">금요일마다</string>
    <string name="tv_saturday">토요일마다</string>
    <string name="tv_default">없음</string>
    <string name="tv_wake_up_song">아침 알람</string>
    <string name="tv_minions">미니언즈 알람</string>
    <string name="tv_jarvis">자비스 알람</string>
    <string name="tv_cheer">활기찬 알람</string>
    <string name="tv_energy_sound">신나는 알람</string>
    <string name="tv_mirotic_sound">신비한 알람</string>
    <string name="notification_content">알람 해제 버튼을 눌러주세요.</string>
    <string name="notification_title">알람</string>
    <string name="action_detail">알람 정보</string>
    <string name="action_edit">Edit</string>
    <string name="btn_delete_alaram">알람 삭제</string>
    <string name="not_find_location">현재 위치를 불러 올 수 없습니다.</string>
    <string name="tv_not_iteration">설정되지않음</string>
    <string name="tv_none_sound">없음</string>
    <string name="tv_not_data">알람 정보가 없습니다.</string>
    <string name="tv_request_alaram">새로운 알람을 등록해주세요.</string>
</resources>
